# nanomsg_copy

./: CMakeLists.txt  LICENSE  README.md  configure
demo/: CMakeLists.txt  basic_demo.c
src/: CMakeLists.txt  bus.h  inproc.h  ipc.h  nn.c  nn.h  pair.h  protocol.h  pubsub.h  reqrep.h  survey.h  tcp.h  transport.h  ws.h
src/aio/: ctx.c  ctx.h  fsm.c  fsm.h  poller.c  poller.h  poller_epoll.h  poller_epoll.inc  poller_kqueue.h  poller_kqueue.inc  poller_poll.h  poller_poll.inc  pool.c  pool.h  timer.c  timer.h  timerset.c  timerset.h  usock.c  usock.h  usock_posix.h  usock_posix.inc  usock_win.h  usock_win.inc  worker.c  worker.h  worker_posix.h  worker_posix.inc  worker_win.h  worker_win.inc
src/core/: ep.c  ep.h  global.c  global.h  pipe.c  poll.c  sock.c  sock.h  sockbase.c  symbol.c
src/device/: device.h
src/protocols/bus/: xbus.h
src/protocols/pair/: xpair.h
src/protocols/pipeline/: xpull.h  xpush.h
src/protocols/pubsub/: trie.h  xpub.h  xsub.h
src/protocols/reqrep/: rep.h  req.h  task.h  xrep.h  xreq.h
src/protocols/survey/: xrespondent.h  xsurveyor.h
src/protocols/utils/: dist.h  excl.h  fq.h  lb.h  priolist.h
src/transports/: README
src/transports/inproc/: binproc.c  binproc.h  cinproc.c  cinproc.h  inproc.c  ins.c  ins.h  msgqueue.c  msgqueue.h  sinproc.c  sinproc.h
src/transports/ipc/: aipc.h  bipc.h  cipc.h  ipc.c  sipc.h
src/transports/tcp/: atcp.h  btcp.h  ctcp.h  stcp.h
src/transports/utils/: backoff.h  base64.h  dns.h  dns_getaddrinfo.h  dns_getaddrinfo_a.h  iface.h  literal.h  port.h  streamhdr.h
src/transports/ws/: aws.h  bws.h  cws.h  sha1.h  sws.h  ws_handshake.h
src/utils/: alloc.c  alloc.h  atomic.c  atomic.h  attr.h  chunk.c  chunk.h  chunkref.c  chunkref.h  clock.c  clock.h  closefd.c  closefd.h  condvar.c  condvar.h  cont.h  efd.c  efd.h  efd_eventfd.h  efd_eventfd.inc  efd_pipe.h  efd_pipe.inc  efd_socketpair.h  efd_socketpair.inc  efd_win.h  efd_win.inc  err.c  err.h  fast.h  fd.h  hash.c  hash.h  list.c  list.h  msg.c  msg.h  mutex.c  mutex.h  once.c  once.h  (+23 more)
